--- a/notes/src/index.css
+++ b/notes/src/index.css
@@ -114,7 +114,7 @@ button {
   transition-duration: 0.5s;
 }
 
-button > img {
+button > img{
   width: 20px;
 }
 
@@ -129,7 +129,7 @@ button > label {
 
 }
 
-button:focus {
+button:focus{
   outline: none !important;
 }
 
@@ -178,4 +178,84 @@ button:focus {
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+.popup {  
+  position: fixed;  
+  width: 100%;  
+  height: 100%; 
+  top: 0;  
+  left: 0;  
+  right: 0;  
+  bottom: 0;  
+  margin: auto;  
+  background-color: rgba(37, 37, 37, 0.5);  
+}  
+
+.popup_inner {  
+  border: 2px solid #b8b8b8;
+  position: absolute;  
+  width: 350px;
+  height: 400px;  
+  left: 40vw;
+  top: 20vh;  
+  border-radius: 20px;  
+  background: white;  
+}
+
+.hideForm {
+  position: absolute;
+  right: 10px;
+  top: 20px;
+}
+
+.hideForm img {
+  width: 30px;
+}
+
+.popup_inner form {
+  position: absolute;
+  top: 60px;
+  left: 50px;
+}
+
+.logInFields {
+  width: 230px;
+  margin-top: 40px;
+  height: 20px;
+  padding: 10px;
+  border: 0px;
+  border-bottom: 1px solid #b8b8b8;
+  font-size: 16px;
+}
+
+.logInFields:focus{
+  outline: none !important;
+  border-bottom: 1px solid #c9c9c9;
+}
+
+button[type='submit']{
+  position: absolute;
+  top: 210px;
+  left: 65px;
+  font-size: 16px;
+  border: 1px solid black;
+  padding: 12px 20px 12px 20px;
+  border-radius: 20px;
+}
+  
+button[type='submit']:hover {
+  background-color: rgb(212, 212, 212);
+  transform: scale(1.05)
+}
+
+.signUpTxt {
+  position: absolute;
+  top: 280px;
+  left: 10px;
+}
+
+.signUpTxt button:hover {
+  color: rgb(100, 100, 218);
+  border-bottom: 1px solid rgb(100, 100, 218);
 }
