--- a/client/src/App.css
+++ b/client/src/App.css
@@ -176,3 +176,24 @@ textarea:focus {
     margin-left: 10px;
     width: 25px;
 }
+
+.modals {
+    text-align: center; 
+    width: 300px;
+}
+
+.modalInput {
+    margin: 0 auto;
+    width: 200px;
+    text-align: center;
+}
+
+.modalBtn {
+    background-color: #bebebe;
+    margin: 0 auto;
+    width: 100px;
+}
+
+.modalHeader {
+    background-color: #e2e2e2;
+}
